--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0', head, truffleruby, truffleruby-head]
+        ruby-version: ['2.7', '3.0', '3.1.2p', '3.2.2', head]
 
     steps:
     - uses: actions/checkout@v2
